# superbru_random_predictor

./: pyproject.toml
superbru_random_predictor/: predictor.py
